src/test/deca/context/invalid/declaVariable-voidTypeWithValue.context
declaVariable-voidTypeWithValue.deca:2:
